<resources>
    <string name="app_name">LMS</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    //signup xml
    <string name="sign_up">Sign Up</string>
    <string name="student_id">Student ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="classes_picker">Classes</string>
    <string name="button_signup">Sign Up</string>

    //login xml
    <string name="sign_in">Sign In</string>
    <string name="signin_button">Sign In</string>
    <string name="signup_button">Register</string>

    //messages xml
    <string name="messages">Messages</string>
    <string name="inbox">inbox</string>
    <string name="outbox">outbox</string>
    <string name="no_messages_text">No Messages</string>

    // home xml
    <string name="home">Home</string>

    //main menu xml
    <string name="overview_text">Overview</string>
    <string name="myprogress_text">My Progress</string>
    <string name="downloadable_material_text">Downloadable Material</string>
    <string name="assignments_text">Assignments</string>
    <string name="announcement_text">Announcements</string>
    <string name="class_calendar_text">Class Calendar</string>
    <string name="quiz_text">Quiz</string>

    //overview xml
    <string name="my_classmates_text">My Class Mates</string>
    <string name="login_err">Please check user details</string>
    <string name="Enter_valid_Username">Enter a valid username</string>
    <string name="Enter_valid_PASS">Enter a valid password</string>
    <string name="Enter_valid_last_name">Enter a valid last name</string>

    //quiz_row

    <string name="quiz_title">Title</string>
    <string name="quiz_description">Description</string>
    <string name="quiz_time">Time</string>
    <string name="quiz_score">Score</string>
    <string name="take_quiz">Take quiz</string>
    <string name="already_taken">Already taken</string>

    //fragment_take_quiz_true_false

    <string name="quiz_time_remaining">Time Remaining</string>
    <string name="question">Question</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="answer_a">A.</string>
    <string name="answer_b">B.</string>
    <string name="answer_c">C.</string>
    <string name="answer_d">D.</string>

    //activity_take_quiz
    <string name="next_question">Next</string>

    //assignment_row
    <string name="assignment_name">File name</string>
    <string name="date_upload">Date upload</string>
    <string name="assignment_desc">Description</string>
    <string name="upload_assignment">Upload</string>
    <string name="download_assignment">Download</string>

    //downloadable_fragment

    <string name="downloadable_name">Name</string>
    <string name="downloadable_file_name">File Name</string>
    <string name="downloadable_desc_name">Description</string>
    <string name="downloadable_uploaded_by">Uploaded by</string>
    <string name="downloadable_date">Date upload</string>

    //activity_upload
    <string name="hint_filename">File name</string>
    <string name="hint_description">Description</string>
    <string name="upload">Upload</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    //progress
    <string name="assignment_grade">Grade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_data">incorrect data</string>
    <string name="class_error">class id error</string>
    <string name="password_not_match">password doesnt match</string>
    <string name="NO_TEACHER">there is no teacher for this class</string>
    <string name="NO_CLASSMATES">No class mates</string>
    <string name="notfication">notification</string>
    <string name="to_text">To :</string>
    <string name="send">Send</string>
    <string name="classes">Classes</string>
    <string name="profile">Profile</string>

    //Profile activity
    <string name="profile_class">Classes</string>
    <string name="student_home">Student Home</string>
    <string name="assignment">Assignment</string>
    <string name="class_activity">Class</string>
    <string name="take_quiz_text">Take Quiz</string>
    <string name="downloadable_text">Downloadable Material</string>
    <string name="email">Email</string>
    <string name="edit">Edit profile</string>

</resources>
