<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray50"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            app:title="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:elevation="7dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="center"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="36dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_id"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:layout_marginTop="12dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/student_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/first_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/student_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/last_name" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:id="@+id/student_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/student_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/student_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="24dp"
            >

            <android.support.v7.widget.AppCompatSpinner
                android:prompt="@string/classes_picker"
                android:background="@drawable/red_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/class_spiner"
                android:spinnerMode="dropdown"
                android:clickable="true" />
            <FrameLayout
                android:background="@drawable/red_frame"
                android:layout_gravity="center|right"
                android:layout_width="36dp"
                android:layout_height="match_parent" >
                <ImageView
                    android:tint="@color/colorAccent"
                    android:src="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_gravity="center"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </FrameLayout>
        </FrameLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="@dimen/mid_text_size"
            android:background="@drawable/blue_btn"
            android:text="@string/button_signup"
            android:textColor="@color/white"


            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>