<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_take_quiz_mcq"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="6dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quiz_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_quiz_mcq_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="175dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:text="Quiz title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quiz_description"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_quiz_mcq_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="175dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:text="Quiz description"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quiz_time_remaining"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_quiz_mcq_time_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="175dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:text="00:00:00"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />

            </FrameLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/text_view_mcq_question_number"
                    />
                <TextView
                    android:id="@+id/textview_quiz_mcq_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="8dp"
                    android:text="first question ?"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radiogroup_mcq">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/answer_a"
                        android:id="@+id/radiobutton_a"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/answer_b"
                        android:id="@+id/radiobutton_b"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/answer_c"
                        android:id="@+id/radiobutton_c"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/answer_c"
                        android:id="@+id/radiobutton_d"
                        />
                </RadioGroup>
            </FrameLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>

