<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>
        </FrameLayout>


        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/white"
            android:id="@+id/layout_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/student_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_id"
                android:layout_marginLeft="24dp"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginRight="24dp"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:layout_marginTop="12dp"/>
</android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/white"
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText

                android:id="@+id/student_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/student_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">
            <Button
                android:id="@+id/signup_button"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_btn"
                android:text="@string/signup_button"
                android:textColor="@color/white"
                android:layout_marginLeft="24dp"
                />

            <Button
                android:id="@+id/signin_button"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_btn"
                android:text="@string/signin_button"
                android:textColor="@color/black"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                />

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:background="@color/scrim"
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:visibility="visible"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>
</FrameLayout>
