<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray50"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="108dp">
        <android.support.v7.widget.Toolbar
            app:theme="@style/customToolBarTheme"
            android:id="@+id/toolbar"
            app:titleTextColor="@color/white"
            app:title="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/change_img"
        android:layout_marginTop="48dp"
        android:elevation="7dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="center"
        android:layout_width="108dp"
        android:layout_height="108dp">
        <ImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            />

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/avatar"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            />

    </android.support.v7.widget.CardView>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="36dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/student_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/first_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/student_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/last_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:singleLine="true"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <EditText
                android:id="@+id/student_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/student_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/student_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/mid_text_size"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="@dimen/mid_text_size"
            android:background="@drawable/blue_btn"
            android:text="@string/edit"
            android:textColor="@color/white"


            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressBarView"
        android:visibility="gone"
        android:background="#2A000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            app:contentPaddingLeft="@dimen/padding_normal"
            app:contentPaddingTop="@dimen/padding_dialog"
            app:contentPaddingRight="@dimen/padding_dialog"
            app:contentPaddingBottom="@dimen/padding_normal"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:id="@+id/txtPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:textSize="30dp" />

            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="35dp"
                android:visibility="gone"/>
        </android.support.v7.widget.CardView>
    </FrameLayout>


    <FrameLayout
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:elevation="12dp"
        android:background="@color/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>